contrib/common/test/static/contrib/jsl/tests/errors/syntax_error.js
function syntax_error() {
    &; /*warning:syntax_error*/
}

